--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
   <div class="itens-aligner">
-  <h1>Calculadora de fatorial</h1>
-  <input id="numero" type="text" placeholder="Insira o número">
-  <button onclick="calcular()">Calcular fatorial</button>
-  <br>
-  <p id="resultado"></p>
-</div>
+    <h1>Calculadora de fatorial</h1>
+    <input id="numero" type="text" placeholder="Insira o número">
+    <button onclick="calcular()">Calcular fatorial</button>
+    <br>
+    <p id="resultado"></p>
+  </div>
+  <footer>
+    <p>Feito por Gustavo Braga</p>
+  </footer>
 </body>
 </html>
